--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
           <nav class="flex items-center h-4/6 justify-center">
             <ul class="space-y-4 flex flex-col items-center justify-around h-1/2">
                 <li><a href="/" aria-label="Our product" title="Our product" class="font-medium tracking-wide text-gold transition-colors duration-200 hover:text-white">Product</a></li>
-                <li><a href="./index.html" aria-label="Our product" title="Our product" class="font-medium tracking-wide text-gold transition-colors duration-200 hover:text-white">Landing Site</a></li>
+                <li><a href="https://dude-curious.github.io/kriti_ventures/" aria-label="Our product" title="Our product" class="font-medium tracking-wide text-gold transition-colors duration-200 hover:text-white">Landing Site</a></li>
               <li><a href="./features.html" aria-label="Our product" title="Our product" class="font-medium tracking-wide text-gold transition-colors duration-200 hover:text-white">Features</a></li>
               <li><a href="/" aria-label="Product pricing" title="Product pricing" class="font-medium tracking-wide text-gold transition-colors duration-200 hover:text-white">Pricing</a></li>
               <li><a href="./aboutUs.html" aria-label="About us" title="About us" class="font-medium tracking-wide text-gold transition-colors duration-200 hover:text-white">About us</a></li>
