--- a/features.html
+++ b/features.html
@@ -31,9 +31,9 @@
             <div class="px-4 mx-auto  sm:max-w-xl md:max-w-full lg:max-w-screen-xl md:px-24 lg:px-8">
                 
                 <div class="relative flex items-center justify-start ">
-                     <a href="./northern_colombia.html" id="backBtn"><img src="https://img.icons8.com/ios-glyphs/30/ffffff/back.png" alt="" srcset=""> </a>
+                     <a href="/" id="backBtn"><img src="https://img.icons8.com/ios-glyphs/30/ffffff/back.png" alt="" srcset=""> </a>
                      
-                    <a href="./index.html" aria-label="Company" title="Company" class="inline-flex mx-auto items-center contactUsBtn">
+                    <a href="#" aria-label="Company" title="Company" class="inline-flex mx-auto items-center contactUsBtn">
                         <img src="./imgs/logo.png" loading="lazy" alt="">
                         <span class="ml-2 text-xl font-bold tracking-wide text-gold uppercase  ">Kiriti Ventures</span>
                     </a>
