every thing updated

--- a/features.html
+++ b/features.html
@@ -31,7 +31,7 @@
             <div class="px-4 mx-auto  sm:max-w-xl md:max-w-full lg:max-w-screen-xl md:px-24 lg:px-8">
                 
                 <div class="relative flex items-center justify-start ">
-                     <a href="/" id="backBtn"><img src="https://img.icons8.com/ios-glyphs/30/ffffff/back.png" alt="" srcset=""> </a>
+                     <a href="https://dude-curious.github.io/northern_colombia/" id="backBtn"><img src="https://img.icons8.com/ios-glyphs/30/ffffff/back.png" alt="" srcset=""> </a>
                      
                     <a href="#" aria-label="Company" title="Company" class="inline-flex mx-auto items-center contactUsBtn">
                         <img src="./imgs/logo.png" loading="lazy" alt="">
