--- a/aboutUs.html
+++ b/aboutUs.html
@@ -25,7 +25,7 @@
             <div class="px-4 py-6 mx-auto lg:py-8 sm:max-w-xl md:max-w-full lg:max-w-screen-xl md:px-24 lg:px-8">
                 
                 <div class="relative flex items-center justify-start ">
-                     <a href="./northern_colombia.html" id="backBtn"><img src="https://img.icons8.com/ios-glyphs/30/ffffff/back.png" alt="" srcset=""> </a>
+                     <a href="./index.html" id="backBtn"><img src="https://img.icons8.com/ios-glyphs/30/ffffff/back.png" alt="" srcset=""> </a>
                      
                     <a href="./index.html" aria-label="Company" title="Company" class="inline-flex mx-auto items-center contactUsBtn">
                         <img src="./imgs/logo.png" loading="lazy" alt="">
@@ -78,7 +78,7 @@
                 <div class="px-4 pt-16 mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-xl md:px-24 lg:px-8">
                     <div class="grid gap-10 row-gap-6 mb-8 sm:grid-cols-2 lg:grid-cols-4">
                         <div class="sm:col-span-2">
-                            <a href="/" aria-label="Go home" title="Company" class="inline-flex items-center">
+                            <a href="/" aria-label="Uber - luxury plotted development" title="Company" class="inline-flex items-center">
                                 <svg class="w-8 text-gold" viewBox="0 0 24 24" stroke-linejoin="round"
                                     stroke-width="2" stroke-linecap="round" stroke-miterlimit="10" stroke="currentColor" fill="none">
                                     <rect x="3" y="1" width="7" height="12"></rect>
